  * Fix crash if partman exits while the create or edit dialog is being
    displayed (LP: #108204).
  * Reconfigure /etc/papersize on installation (LP: #104160).
  * When changing values of debconf questions in /target, make sure to shut
    down debconf-communicate even if the Python debconf confmodule raises an
    exception.
  * Add an intro message noting that we're alpha again.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 12 Apr 2007 15:21:08 +0100

ubiquity (1.4.11) feisty; urgency=low

  * Fix broken French and Turkish translations of "Go Back" and "Continue"
    (LP: #105903).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 12 Apr 2007 18:46:59 +0100

ubiquity (1.4.10) feisty; urgency=low

  * Improve the layout of the language page resulting from the release-notes
    link (LP: #105470).
  * Automatic update of included source packages: hw-detect 1.45ubuntu4.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 11 Apr 2007 14:10:21 +0100

ubiquity (1.4.9) feisty; urgency=low

  * Suppress error dialog if the user quits while a debconffiltered process
    is running.
  * New partitioner: If the user tries to change multiple attributes of a
    partition at once, look each item up in the partman menu in sequence
    rather than looking them all up at the start. This makes it possible
    e.g. to change the method from one that doesn't support a mountpoint to
    one that does and set a mountpoint at the same time.
  * Update translations from Rosetta.
  * Automatic update of included source packages: console-setup
    1.13ubuntu13, partman-auto 62ubuntu10.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 10 Apr 2007 22:52:56 +0100

ubiquity (1.4.8) feisty; urgency=low

  * Install PartitionsBarKde.py in ubiquity-frontend-kde.install
  * Only translate QWidgets (LP: #103575)

 -- Jonathan Riddell <jriddell@ubuntu.com>  Fri,  6 Apr 2007 16:58:04 +0100

ubiquity (1.4.7) feisty; urgency=low

  [ Colin Watson ]